# SQPEngine

./: CMakeLists.txt  README.md
sqp_engine/: sqp_engine.cpp  sqp_engine.h
